// Vitest Snapshot v1

exports[`test menu click forbid trigger 1`] = `
"<div class=\\"container\\">
  <div class=\\"var-menu\\">
    <!---->
    <div class=\\"var-menu__menu var-elevation--3 var-menu-enter-from var-menu-enter-active\\" style=\\"top: calc(0px + 100px); left: calc(0px + 100px); z-index: 2002;\\">
      <div class=\\"menu-content\\"></div>
    </div>
  </div>
</div>"
`;

exports[`test menu trigger 1`] = `
"<div class=\\"container\\">
  <div class=\\"var-menu\\">
    <!---->
    <div class=\\"var-menu__menu var-elevation--3 var-menu-enter-from var-menu-enter-active\\" style=\\"top: calc(0px + 100px); left: calc(0px + 100px); z-index: 2001;\\">
      <div class=\\"menu-content\\"></div>
    </div>
  </div>
</div>"
`;

exports[`test menu trigger 2`] = `
"<div class=\\"container\\">
  <div class=\\"var-menu\\">
    <!---->
    <div class=\\"var-menu__menu var-elevation--3\\" style=\\"top: calc(0px + 100px); left: calc(0px + 100px); z-index: 2001; display: none;\\">
      <div class=\\"menu-content\\"></div>
    </div>
  </div>
</div>"
`;
